# notes-exporter

./: README.md  flake.nix  pyproject.toml
modules/: notes-exporter.nix
src/notes_exporter/: __main__.py
tests/: test_main.py
